--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </h5>
         <h4>
           <i class="fa fa-book fa-2x"></i>
-          <a href="http://bit.ly/2kjMwxQ" target="_blank">Material</a>
+          <a href="http://www.slideshare.net/AmirdoNascimentoElem/html-e-css-71006416" target="_blank">Material</a>
         </h4>
       </div>
     </div>
@@ -75,6 +75,7 @@
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
       <i class="fa fa-book"></i>
+      <i class="fa fa-check"></i>
       <i class="fa fa-meetup"></i>
       <i class="fa fa-github"></i>
     </div>
@@ -116,7 +117,7 @@
         </h5>
         <h4>
           <i class="fa fa-book fa-2x"></i>
-          <a href="http://bit.ly/2k8SWAf" target="_blank">Material</a>
+          <a href="https://speakerdeck.com/rafaelhenrique/linux-e-python" target="_blank">Material</a>
         </h4>
       </div>
     </div>
@@ -125,6 +126,7 @@
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
       <i class="fa fa-book"></i>
+      <i class="fa fa-check"></i>
       <i class="fa fa-meetup"></i>
       <i class="fa fa-github"></i>
     </div>
@@ -175,6 +177,7 @@
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
       <i class="fa fa-book"></i>
+      <i class="fa fa-check"></i>
       <i class="fa fa-meetup"></i>
       <i class="fa fa-github"></i>
     </div>
@@ -214,17 +217,18 @@
           <i class="fa fa-meetup fa-2x"></i>
           <a href="http://meetu.ps/36XGr4" target="_blank"><i class="fa fa-check fa-2x"></i> 26/02/17</a>
         </h5>
-        <h4>
+        <!-- <h4>
           <i class="fa fa-book fa-2x"></i>
           <a href="" target="_blank">Material</a>
-        </h4>
+        </h4> -->
       </div>
     </div>
   </div><!-- /CONTENT PANEL -->
 
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
-      <i class="fa fa-book"></i>
+      <!-- <i class="fa fa-book"></i> -->
+      <i class="fa fa-check"></i>
       <i class="fa fa-meetup"></i>
       <i class="fa fa-github"></i>
     </div>
@@ -262,7 +266,7 @@
         </h4>
         <h5>
           <i class="fa fa-meetup fa-2x"></i>
-          <a href="http://meetu.ps/37nqPm" target="_blank"><i class="fa fa-check fa-2x"></i> /17</a>
+          <a href="http://meetu.ps/37nqPm" target="_blank"><i class="fa fa-check fa-2x"></i> 11/03/17</a>
         </h5>
         <h4>
           <i class="fa fa-book fa-2x"></i>
@@ -275,6 +279,7 @@
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
       <i class="fa fa-book"></i>
+      <i class="fa fa-check"></i>
       <i class="fa fa-meetup"></i>
       <i class="fa fa-github"></i>
     </div>
@@ -310,22 +315,22 @@
           <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/logica-de-programacao.md" target="_blank">
           <span>Lógica de Programação</span></a>
         </h4>
-        <h5>
+        <!-- <h5>
           <i class="fa fa-meetup fa-2x"></i>
           <a href="" target="_blank"> /17</a>
         </h5>
         <h4>
           <i class="fa fa-book fa-2x"></i>
           <a href="" target="_blank">Material</a>
-        </h4>
+        </h4> -->
       </div>
     </div>
   </div><!-- /CONTENT PANEL -->
 
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
-      <i class="fa fa-book"></i>
-      <i class="fa fa-meetup"></i>
+      <!-- <i class="fa fa-book"></i>
+      <i class="fa fa-meetup"></i> -->
       <i class="fa fa-github"></i>
     </div>
     <div class="gfa">
@@ -361,22 +366,22 @@
           <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/LINK" target="_blank">
           <span>Mutirão Python</span></a>
         </h4>
-        <h5>
+        <!-- <h5>
           <i class="fa fa-meetup fa-2x"></i>
           <a href="" target="_blank"> /17</a>
         </h5>
         <h4>
           <i class="fa fa-book fa-2x"></i>
           <a href="" target="_blank">Material</a>
-        </h4>
+        </h4> -->
       </div>
     </div>
   </div><!-- /CONTENT PANEL -->
 
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
-      <i class="fa fa-book"></i>
-      <i class="fa fa-meetup"></i>
+      <!-- <i class="fa fa-book"></i>
+      <i class="fa fa-meetup"></i> -->
       <i class="fa fa-github"></i>
     </div>
     <div class="gfa">
@@ -411,22 +416,22 @@
           <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/introducao-ao-postgresql.md" target="_blank">
           <span>Introdução ao PostgreSQL</span></a>
         </h4>
-        <h5>
+        <!-- <h5>
           <i class="fa fa-meetup fa-2x"></i>
           <a href="" target="_blank"> /17</a>
         </h5>
         <h4>
           <i class="fa fa-book fa-2x"></i>
           <a href="" target="_blank">Material</a>
-        </h4>
+        </h4> -->
       </div>
     </div>
   </div><!-- /CONTENT PANEL -->
 
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
-      <i class="fa fa-book"></i>
-      <i class="fa fa-meetup"></i>
+      <!-- <i class="fa fa-book"></i>
+      <i class="fa fa-meetup"></i> -->
       <i class="fa fa-github"></i>
     </div>
     <div class="gfa">
@@ -462,22 +467,22 @@
           <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/web-scraping.md" target="_blank">
           <span>Web Scraping</span></a>
         </h4>
-        <h5>
+        <!-- <h5>
           <i class="fa fa-meetup fa-2x"></i>
           <a href="" target="_blank"> /17</a>
         </h5>
         <h4>
           <i class="fa fa-book fa-2x"></i>
           <a href="" target="_blank">Material</a>
-        </h4>
+        </h4> -->
       </div>
     </div>
   </div><!-- /CONTENT PANEL -->
 
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
-      <i class="fa fa-book"></i>
-      <i class="fa fa-meetup"></i>
+      <!-- <i class="fa fa-book"></i>
+      <i class="fa fa-meetup"></i> -->
       <i class="fa fa-github"></i>
     </div>
     <div class="gfa">
@@ -513,22 +518,22 @@
           <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/flask.md" target="_blank">
           <span>Flask</span></a>
         </h4>
-        <h5>
+        <!-- <h5>
           <i class="fa fa-meetup fa-2x"></i>
           <a href="" target="_blank"> /17</a>
         </h5>
         <h4>
           <i class="fa fa-book fa-2x"></i>
           <a href="" target="_blank">Material</a>
-        </h4>
+        </h4> -->
       </div>
     </div>
   </div><!-- /CONTENT PANEL -->
 
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
-      <i class="fa fa-book"></i>
-      <i class="fa fa-meetup"></i>
+      <!-- <i class="fa fa-book"></i>
+      <i class="fa fa-meetup"></i> -->
       <i class="fa fa-github"></i>
     </div>
     <div class="gfa">
@@ -564,22 +569,22 @@
           <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/django.md" target="_blank">
           <span>Django</span></a>
         </h4>
-        <h5>
+        <!-- <h5>
           <i class="fa fa-meetup fa-2x"></i>
           <a href="" target="_blank"> /17</a>
         </h5>
         <h4>
           <i class="fa fa-book fa-2x"></i>
           <a href="" target="_blank">Material</a>
-        </h4>
+        </h4> -->
       </div>
     </div>
   </div><!-- /CONTENT PANEL -->
 
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
-      <i class="fa fa-book"></i>
-      <i class="fa fa-meetup"></i>
+      <!-- <i class="fa fa-book"></i>
+      <i class="fa fa-meetup"></i> -->
       <i class="fa fa-github"></i>
     </div>
     <div class="gfa">
@@ -616,22 +621,22 @@
           <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/fazendo-deploy-do-seu-projeto-no-heroku.md" target="_blank">
           <span>Fazendo Deploy do seu projeto no Heroku</span></a>
         </h4>
-        <h5>
+        <!-- <h5>
           <i class="fa fa-meetup fa-2x"></i>
           <a href="" target="_blank"> /17</a>
         </h5>
         <h4>
           <i class="fa fa-book fa-2x"></i>
           <a href="" target="_blank">Material</a>
-        </h4>
+        </h4> -->
       </div>
     </div>
   </div><!-- /CONTENT PANEL -->
 
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
-      <i class="fa fa-book"></i>
-      <i class="fa fa-meetup"></i>
+      <!-- <i class="fa fa-book"></i>
+      <i class="fa fa-meetup"></i> -->
       <i class="fa fa-github"></i>
     </div>
     <div class="gfa">
@@ -667,22 +672,22 @@
           <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/elm.md" target="_blank">
           <span>Elm</span></a>
         </h4>
-        <h5>
+        <!-- <h5>
           <i class="fa fa-meetup fa-2x"></i>
           <a href="" target="_blank"> /17</a>
         </h5>
         <h4>
           <i class="fa fa-book fa-2x"></i>
           <a href="" target="_blank">Material</a>
-        </h4>
+        </h4> -->
       </div>
     </div>
   </div><!-- /CONTENT PANEL -->
 
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
-      <i class="fa fa-book"></i>
-      <i class="fa fa-meetup"></i>
+      <!-- <i class="fa fa-book"></i>
+      <i class="fa fa-meetup"></i> -->
       <i class="fa fa-github"></i>
     </div>
     <div class="gfa">
@@ -718,22 +723,22 @@
           <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/api-e-microservices.md" target="_blank">
           <span>Api + Microservices</span></a>
         </h4>
-        <h5>
+        <!-- <h5>
           <i class="fa fa-meetup fa-2x"></i>
           <a href="" target="_blank"> /17</a>
         </h5>
         <h4>
           <i class="fa fa-book fa-2x"></i>
           <a href="" target="_blank">Material</a>
-        </h4>
+        </h4> -->
       </div>
     </div>
   </div><!-- /CONTENT PANEL -->
 
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
-      <i class="fa fa-book"></i>
-      <i class="fa fa-meetup"></i>
+      <!-- <i class="fa fa-book"></i>
+      <i class="fa fa-meetup"></i> -->
       <i class="fa fa-github"></i>
     </div>
     <div class="gfa">
@@ -768,22 +773,22 @@
           <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/testes-e-integracao-continua.md" target="_blank">
           <span>Testes e Integração Contínua</span></a>
         </h4>
-        <h5>
+        <!-- <h5>
           <i class="fa fa-meetup fa-2x"></i>
           <a href="" target="_blank"> /17</a>
         </h5>
         <h4>
           <i class="fa fa-book fa-2x"></i>
           <a href="" target="_blank">Material</a>
-        </h4>
+        </h4> -->
       </div>
     </div>
   </div><!-- /CONTENT PANEL -->
 
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
-      <i class="fa fa-book"></i>
-      <i class="fa fa-meetup"></i>
+      <!-- <i class="fa fa-book"></i>
+      <i class="fa fa-meetup"></i> -->
       <i class="fa fa-github"></i>
     </div>
     <div class="gfa">
@@ -819,22 +824,22 @@
           <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/iot.md" target="_blank">
           <span>Python & IOT</span></a>
         </h4>
-        <h5>
+        <!-- <h5>
           <i class="fa fa-meetup fa-2x"></i>
           <a href="" target="_blank"> /17</a>
         </h5>
         <h4>
           <i class="fa fa-book fa-2x"></i>
           <a href="" target="_blank">Material</a>
-        </h4>
+        </h4> -->
       </div>
     </div>
   </div><!-- /CONTENT PANEL -->
 
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
-      <i class="fa fa-book"></i>
-      <i class="fa fa-meetup"></i>
+      <!-- <i class="fa fa-book"></i>
+      <i class="fa fa-meetup"></i> -->
       <i class="fa fa-github"></i>
     </div>
     <div class="gfa">
