logica e main.js

--- a/index.html
+++ b/index.html
@@ -31,10 +31,18 @@
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('img/slides/logica.jpg');">
+                <div class="fill" style="background-image:url('img/slides/logic.png');">
                 </div>
                 <div class="carousel-caption">
                   <h1>Lógica de Programação</h1>
+                    <h2>08/04/17 na IBM</h2>
+                </div>
+            </div>
+            <div class="item">
+                <div class="fill" style="background-image:url('img/slides/python2.png');">
+                </div>
+                <div class="carousel-caption">
+                  <h1>Mutirão Python</h1>
                     <h2>Em breve</h2>
                 </div>
             </div>
@@ -353,7 +361,7 @@
   <div class="widget-body" id="widget-body6"> <!-- CONTENT PANEL -->
     <div class="row">
       <div class="col-md-3">
-        <img src="img/logica.jpg" alt="">
+        <img src="img/logic.png" alt="">
       </div>
       <div class="col-md-9">
         <h4>
