Refactor main.js

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <!-- 01 HTML e CSS básico -->
 
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
-  <div id="div1" class="widget-head btn-red"> <!-- HEAD PANEL -->
+  <div class="widget-trigger widget-head btn-red" data-target-id="1"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
       <i class="fa fa-html5 fa-2x"></i>
       <span class="lead">HTML e CSS básico</span>
@@ -147,7 +147,7 @@
 <!-- 02 Introdução ao Linux -->
 
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
-  <div id="div2" class="widget-head btn-black"> <!-- HEAD PANEL -->
+  <div class="widget-trigger widget-head btn-black" data-target-id="2"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
       <i class="fa fa-linux fa-2x"></i>
       <span class="lead">Introdução ao Linux</span>
@@ -198,7 +198,7 @@
 <!-- 03 Noções de JavaScript e jQuery -->
 
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
-  <div id="div3" class="widget-head btn-yellow"> <!-- HEAD PANEL -->
+  <div class="widget-trigger widget-head btn-yellow" data-target-id="3"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
       <img src="img/javascript_logo.svg" alt="" height="30px">
       <span class="lead">Noções de JavaScript e jQuery</span>
@@ -249,7 +249,7 @@
 <!-- 04 Introdução ao Vim -->
 
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
-  <div id="div4" class="widget-head btn-green"> <!-- HEAD PANEL -->
+  <div class="widget-trigger widget-head btn-green" data-target-id="4"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
       <img src="img/vim_white_logo.png" alt="" height="30px">
       <span class="lead">Introdução ao Vim</span>
@@ -300,7 +300,7 @@
 <!-- 05 Introdução ao Git -->
 
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
-  <div id="div5" class="widget-head btn-violet"> <!-- HEAD PANEL -->
+  <div class="widget-trigger widget-head btn-violet" data-target-id="5"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
       <i class="fa fa-git fa-2x"></i>
       <span class="lead">Introdução ao Git</span>
@@ -351,7 +351,7 @@
 <!-- 06 Lógica de Programação -->
 
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
-  <div id="div6" class="widget-head btn-dark-gray"> <!-- HEAD PANEL -->
+  <div class="widget-trigger widget-head btn-dark-gray" data-target-id="6"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
       <img src="img/brain.svg" alt="" height="30px">
       <span class="lead">Lógica de Programação</span>
@@ -402,7 +402,7 @@
 <!-- 07 Mutirão Python -->
 
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
-  <div id="div7" class="widget-head btn-blue"> <!-- HEAD PANEL -->
+  <div class="widget-trigger widget-head btn-blue" data-target-id="7"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
       <img src="img/python_white_logo.png" alt="" height="30px">
       <span class="lead">Mutirão Python</span>
@@ -452,7 +452,7 @@
 <!-- 08 Introdução ao PostgreSQL -->
 
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
-  <div id="div8" class="widget-head btn-violet"> <!-- HEAD PANEL -->
+  <div class="widget-trigger widget-head btn-violet" data-target-id="8"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
       <img src="img/postgresql_white_logo.png" alt="" height="30px">
       <span class="lead">Introdução ao PostgreSQL</span>
@@ -503,7 +503,7 @@
 <!-- 09 Web Scraping -->
 
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
-  <div id="div9" class="widget-head btn-blue"> <!-- HEAD PANEL -->
+  <div class="widget-trigger widget-head btn-blue" data-target-id="9"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
       <img src="img/scrapy.png" alt="" height="30px">
       <span class="lead">Web Scraping</span>
@@ -554,7 +554,7 @@
 <!-- 10 Flask -->
 
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
-  <div id="div10" class="widget-head btn-black"> <!-- HEAD PANEL -->
+  <div class="widget-trigger widget-head btn-black" data-target-id="10"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
       <img src="img/flask_logo.png" alt="" height="30px">
       <span class="lead">Flask</span>
@@ -605,7 +605,7 @@
 <!-- 11 Django -->
 
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
-  <div id="div11" class="widget-head btn-green"> <!-- HEAD PANEL -->
+  <div class="widget-trigger widget-head btn-green" data-target-id="11"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
       <img src="img/django_logo.png" alt="" height="30px">
       <span class="lead">Django</span>
@@ -657,7 +657,7 @@
 <!-- 12 Fazendo Deploy do seu projeto no Heroku -->
 
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
-  <div id="div12" class="widget-head btn-violet"> <!-- HEAD PANEL -->
+  <div class="widget-trigger widget-head btn-violet" data-target-id="12"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
       <img src="img/heroku_white_logo.png" alt="" height="30px">
       <span class="lead">Fazendo Deploy do seu projeto no Heroku</span>
@@ -708,7 +708,7 @@
 <!-- 13 Elm -->
 
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
-  <div id="div13" class="widget-head btn-light-green"> <!-- HEAD PANEL -->
+  <div class="widget-trigger widget-head btn-light-green" data-target-id="13"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
       <img src="img/elm_logo.png" alt="" height="30px">
       <span class="lead">Elm</span>
@@ -759,7 +759,7 @@
 <!-- 14 Api + Microservices -->
 
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
-  <div id="div14" class="widget-head btn-gray"> <!-- HEAD PANEL -->
+  <div class="widget-trigger widget-head btn-gray" data-target-id="14"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
       <img src="img/micro-services.png" alt="" height="30px">
       <span class="lead">Api + Microservices</span>
@@ -810,7 +810,7 @@
 <!-- 15 Testes e Integração Contínua -->
 
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
-  <div id="div15" class="widget-head btn-dark-gray"> <!-- HEAD PANEL -->
+  <div class="widget-trigger widget-head btn-dark-gray" data-target-id="15"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
       <i class="fa fa-puzzle-piece fa-2x"></i>
       <span class="lead">Testes e Integração Contínua</span>
@@ -861,7 +861,7 @@
 <!-- 16 Python & IOT -->
 
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
-  <div id="div16" class="widget-head btn-blue"> <!-- HEAD PANEL -->
+  <div class="widget-trigger widget-head btn-blue" data-target-id="16"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
       <img src="img/iot_logo.png" alt="" height="30px">
       <span class="lead">Python & IOT</span>
